# mp2-lab3-postfix

./: .gitignore  CMakeLists.txt
base/: CMakeLists.txt  TPostfix.h  TQueue.h  TStack.h  TSyntaxCheck.h  Token.h
base_test/: CMakeLists.txt  test_queue.cpp  test_token.cpp  test_tpostfix.cpp  test_tstack.cpp  test_tsyntaxcheck.cpp
samples/: sample.cpp
